# Embedded-RaspberryPi-Godot-UI-Kiosk-Image

./: .gitignore  CMakeLists.txt  README.md  README.rd  build.sh  test.resc
cmake/: aarch64-toolchain.cmake
dendrophone-board/overlay/etc/init.d/: S99dendrophone
dendrophone-emulation/docker/: Dockerfile
dendrophone-emulation/platform/: cm4.repl  run.resc
dendrophone-image/configs/: cm4_defconfig  firmware_config.txt  inittab
dendrophone-image/overlay/etc/: inittab
dendrophone-image/overlay/etc/init.d/: S99Dendrophone
image/configs/: cm4_godot_kiosk_defconfig  firmware_config.txt
image/fragments/: linux-drm.config  linux-silent.config  linux-spi.config  linux-usb.config
image/overlay/etc/init.d/: S99godot-app
scripts/: build.sh  build_emulation.sh  build_image.sh  emulation_builder.sh  image_builder.sh  simulate.resc
src/: display.hpp  main.cpp
